Bug 157590 - HANG: opening file with floating table
Summary: HANG: opening file with floating table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.5.2 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, perf, regression
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2023-10-04 09:32 UTC by Xisco Faulí
Modified: 2023-10-26 11:59 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-10-04 09:32:04 UTC
Steps to reproduce:
1. Open attachment 95725 [details] from bug 76122

-> The file hangs at import time

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0c4913e03e8427a576138601958f2dbf13b8c37b
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-10-04 09:32:58 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.com>	2023-08-10 09:05:18 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2023-08-10 10:41:09 +0200
commit 905962db870e9d1cf1dcf3bd1be44c347cddafe1 (patch)
tree 7facab835f360dd5c9f2f990e3356245b51f5b14
parent 0d2fc6c053cad80c685755d030c6b57202f78d50 (diff)
sw floattable: handle AllowOverlap==false in the layout

Bisected with: bibisect-linux64-24.2

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2023-10-20 09:54:12 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8e03dfd6a4bff4eabf779ace9b758b49cf80f8ba

tdf#157590 sw floattable: avoid hang in the nested + row span case

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Miklos Vajna 2023-10-20 09:55:42 UTC
This was a quite complicated one, should be OK now.
Comment 4 Commit Notification 2023-10-20 19:08:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/72f035790a28ad44ce1242f87eb71eb5241cbb17

tdf#157590 sw floattable: avoid hang in the nested + row span case

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-10-26 06:27:02 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d6527f127622f23ac529ce667fac5ff69ea33ea4

Related: tdf#157590 sw floattable: avoid a bit of not needed work

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-10-26 11:59:46 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/aa70e0d23abc99191829b4f1bc421e04a78e0a21

Related: tdf#157590 sw floattable: avoid a bit of not needed work

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.